raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
// Vector2 type
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
// Vector3 type
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
// Color type, RGBA (32bit)
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
// Rectangle type
typedef struct Rectangle
{
    float x;
    float y;
    float width;
    float height;
} Rectangle;
// Image type, bpp always RGBA (32bit)
// NOTE: Data stored in CPU memory (RAM)
typedef struct Image
{
    void *data;  // Image raw data
    int width;   // Image base width
    int height;  // Image base height
    int mipmaps; // Mipmap levels, 1 by default
    int format;  // Data format (PixelFormat type)
} Image;
// Texture2D type
// NOTE: Data stored in GPU memory
typedef struct Texture2D
{
    unsigned int id; // OpenGL texture id
    int width;       // Texture base width
    int height;      // Texture base height
    int mipmaps;     // Mipmap levels, 1 by default
    int format;      // Data format (PixelFormat type)
} Texture2D;
// N-Patch layout info
typedef struct NPatchInfo
{
    Rectangle sourceRec; // Region in the texture
    int left;            // left border offset
    int top;             // top border offset
    int right;           // right border offset
    int bottom;          // bottom border offset
    int type;            // layout of the n-patch: 3x3, 1x3 or 3x1
} NPatchInfo;
// Font character info
typedef struct CharInfo
{
    int value;           // Character value (Unicode)
    Rectangle rec;       // Character rectangle in sprite font
    int offsetX;         // Character offset X when drawing
    int offsetY;         // Character offset Y when drawing
    int advanceX;        // Character advance position X
    unsigned char *data; // Character pixel data (grayscale)
} CharInfo;
// Font type, includes texture and charSet array data
typedef struct Font
{
    Texture2D texture; // Font texture
    int baseSize;      // Base size (default chars height)
    int charsCount;    // Number of characters
    CharInfo *chars;   // Characters info data
} Font;
    RLAPI void ImageFlipHorizontal(Image *image);                                                                                      // Flip image horizontally
    RLAPI void ImageRotateCW(Image *image);                                                                                            // Rotate image clockwise 90deg
    RLAPI void ImageRotateCCW(Image *image);                                                                                           // Rotate image counter-clockwise 90deg
    RLAPI void ImageColorTint(Image *image, Color color);                                                                              // Modify image color: tint
    RLAPI void ImageColorInvert(Image *image);                                                                                         // Modify image color: invert
    RLAPI void ImageColorGrayscale(Image *image);                                                                                      // Modify image color: grayscale
    RLAPI void ImageColorContrast(Image *image, float contrast);                                                                       // Modify image color: contrast (-100 to 100)
    RLAPI void ImageColorBrightness(Image *image, int brightness);                                                                     // Modify image color: brightness (-255 to 255)
    RLAPI void ImageColorReplace(Image *image, Color color, Color replace);                                                            // Modify image color: replace color
    // Image generation functions
    RLAPI Image GenImageColor(int width, int height, Color color);                                        // Generate image: plain color
    RLAPI Image GenImageGradientV(int width, int height, Color top, Color bottom);                        // Generate image: vertical gradient
    RLAPI Image GenImageGradientH(int width, int height, Color left, Color right);                        // Generate image: horizontal gradient
    RLAPI Image GenImageGradientRadial(int width, int height, float density, Color inner, Color outer);   // Generate image: radial gradient
    RLAPI Image GenImageChecked(int width, int height, int checksX, int checksY, Color col1, Color col2); // Generate image: checked
    RLAPI Image GenImageWhiteNoise(int width, int height, float factor);                                  // Generate image: white noise
    RLAPI Image GenImagePerlinNoise(int width, int height, int offsetX, int offsetY, float scale);        // Generate image: perlin noise
    RLAPI Image GenImageCellular(int width, int height, int tileSize);                                    // Generate image: cellular algorithm. Bigger tileSize means bigger cells
    // Texture2D configuration functions
    RLAPI void GenTextureMipmaps(Texture2D *texture);               // Generate GPU mipmaps for a texture
    RLAPI void SetTextureFilter(Texture2D texture, int filterMode); // Set texture scaling filter mode
    RLAPI void SetTextureWrap(Texture2D texture, int wrapMode);     // Set texture wrapping mode
    // Texture2D drawing functions
    RLAPI void DrawTexture(Texture2D texture, int posX, int posY, Color tint);                                                             // Draw a Texture2D
    RLAPI void DrawTextureV(Texture2D texture, Vector2 position, Color tint);                                                              // Draw a Texture2D with position defined as Vector2
    RLAPI void DrawTextureEx(Texture2D texture, Vector2 position, float rotation, float scale, Color tint);                                // Draw a Texture2D with extended parameters
    RLAPI void DrawTextureRec(Texture2D texture, Rectangle sourceRec, Vector2 position, Color tint);                                       // Draw a part of a texture defined by a rectangle
    RLAPI void DrawTextureQuad(Texture2D texture, Vector2 tiling, Vector2 offset, Rectangle quad, Color tint);                             // Draw texture quad with tiling and offset parameters
    RLAPI void DrawTexturePro(Texture2D texture, Rectangle sourceRec, Rectangle destRec, Vector2 origin, float rotation, Color tint);      // Draw a part of a texture defined by a rectangle with 'pro' parameters
    RLAPI void DrawTextureNPatch(Texture2D texture, NPatchInfo nPatchInfo, Rectangle destRec, Vector2 origin, float rotation, Color tint); // Draws a texture (or part of it) that stretches or shrinks nicely
    //------------------------------------------------------------------------------------
    // Font Loading and Text Drawing Functions (Module: text)
    //------------------------------------------------------------------------------------

    // Font loading/unloading functions
    RLAPI Font GetFontDefault(void);                                                                            // Get the default Font
    RLAPI Font LoadFont(const char *fileName);                                                                  // Load font from file into GPU memory (VRAM)
    RLAPI Font LoadFontEx(const char *fileName, int fontSize, int *fontChars, int charsCount);                  // Load font from file with extended parameters
    RLAPI Font LoadFontFromImage(Image image, Color key, int firstChar);                                        // Load font from Image (XNA style)
    RLAPI CharInfo *LoadFontData(const char *fileName, int fontSize, int *fontChars, int charsCount, int type); // Load font data for further use
    RLAPI Image GenImageFontAtlas(CharInfo *chars, int charsCount, int fontSize, int padding, int packMethod);  // Generate image font atlas using chars info
    RLAPI void UnloadFont(Font font);                                                                           // Unload Font from GPU memory (VRAM)
    // Text drawing functions
    RLAPI void DrawFPS(int posX, int posY);                                                                                       // Shows current FPS
    RLAPI void DrawText(const char *text, int posX, int posY, int fontSize, Color color);                                         // Draw text (using default font)
    RLAPI void DrawTextEx(Font font, const char *text, Vector2 position, float fontSize, float spacing, Color tint);              // Draw text using font and additional parameters
    RLAPI void DrawTextRec(Font font, const char *text, Rectangle rec, float fontSize, float spacing, bool wordWrap, Color tint); // Draw text using font inside rectangle limits
    RLAPI void DrawTextRecEx(Font font, const char *text, Rectangle rec, float fontSize, float spacing, bool wordWrap, Color tint,
                             int selectStart, int selectLength, Color selectText, Color selectBack); // Draw text using font inside rectangle limits with support for text selection
    // Text misc. functions
    RLAPI int MeasureText(const char *text, int fontSize);                                   // Measure string width for default font
    RLAPI Vector2 MeasureTextEx(Font font, const char *text, float fontSize, float spacing); // Measure string size for Font
    RLAPI int GetGlyphIndex(Font font, int character);                                       // Get index position for a unicode character on font
    // Text strings management functions
    // NOTE: Some strings allocate memory internally for returned strings, just be careful!
    RLAPI bool TextIsEqual(const char *text1, const char *text2);                        // Check if two text string are equal
    RLAPI unsigned int TextLength(const char *text);                                     // Get text length, checks for '\0' ending
    RLAPI const char *TextFormat(const char *text, ...);                                 // Text formatting with variables (sprintf style)
    RLAPI const char *TextSubtext(const char *text, int position, int length);           // Get a piece of a text string
    RLAPI const char *TextReplace(char *text, const char *replace, const char *by);      // Replace text string (memory should be freed!)
    RLAPI const char *TextInsert(const char *text, const char *insert, int position);    // Insert text in a position (memory should be freed!)
    RLAPI const char *TextJoin(const char **textList, int count, const char *delimiter); // Join text strings with delimiter
    RLAPI const char **TextSplit(const char *text, char delimiter, int *count);          // Split text into multiple strings
    RLAPI void TextAppend(char *text, const char *append, int *position);                // Append text at specific position and move cursor!
    RLAPI int TextFindIndex(const char *text, const char *find);                         // Find first text occurrence within a string
    RLAPI const char *TextToUpper(const char *text);                                     // Get upper case version of provided string
    RLAPI const char *TextToLower(const char *text);                                     // Get lower case version of provided string
    RLAPI const char *TextToPascal(const char *text);                                    // Get Pascal case notation version of provided string
    RLAPI int TextToInteger(const char *text);                                           // Get integer value from text (negative values not supported)
    //------------------------------------------------------------------------------------
    // Basic 3d Shapes Drawing Functions (Module: models)
    //------------------------------------------------------------------------------------

    // Basic geometric 3D shapes drawing functions
    RLAPI void DrawLine3D(Vector3 startPos, Vector3 endPos, Color color);                                                       // Draw a line in 3D world space
    RLAPI void DrawCircle3D(Vector3 center, float radius, Vector3 rotationAxis, float rotationAngle, Color color);              // Draw a circle in 3D world space
    RLAPI void DrawCube(Vector3 position, float width, float height, float length, Color color);                                // Draw cube
    RLAPI void DrawCubeV(Vector3 position, Vector3 size, Color color);                                                          // Draw cube (Vector version)
    RLAPI void DrawCubeWires(Vector3 position, float width, float height, float length, Color color);                           // Draw cube wires
    RLAPI void DrawCubeTexture(Texture2D texture, Vector3 position, float width, float height, float length, Color color);      // Draw cube textured
    RLAPI void DrawSphere(Vector3 centerPos, float radius, Color color);                                                        // Draw sphere